...
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="del">Deleted from Favorite</string>
    <string name="add">Add to Favorite</string>


    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
    </string-array>

...

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="league">League</string>
    <string name="description">Description</string>
    <string name="favorite">Favorite</string>
    <string name="search_match">Search Match</string>
    <string name="search_team">Search Team</string>

</resources>

