<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
 <item android:id="@+id/search"
     android:icon="@drawable/ic_search_black_24dp"
     app:showAsAction="ifRoom"
     app:actionViewClass="android.widget.SearchView"
     android:title="Search" >

 </item>
</menu>