<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <androidx.appcompat.widget.Toolbar
       android:layout_width="match_parent"
       app:titleTextColor="@android:color/black"
       android:background="@android:color/white"
       android:layout_height="wrap_content" >

      <TextView
         android:textStyle="bold"
         android:fontFamily="monospace"
         android:textColor="@android:color/black"
         android:gravity="center"
         android:textSize="20sp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:text="@string/title" />

   </androidx.appcompat.widget.Toolbar>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_main"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />

</LinearLayout>